<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
>
    <modelVersion>4.0.0</modelVersion>
    <groupId>sur.softsurena</groupId>
    <artifactId>Proyectos</artifactId>
    <version>2</version>
    <packaging>pom</packaging>
    
    <modules>
        <module>SistemaFacturacion</module>
        <module>Entidades</module>
        <module>Imagenes</module>
        <module>ControlCliente</module>
        <module>JHBingo</module>
        <!--<module>Curso JSF/CursoJSF</module>-->
        <module>TelegramBoot</module>
        <!--<module>estanciainfantiles</module>-->
        <module>SophiaStudioMaven</module>
        <module>CajerosMaven</module>
        <module>JPA_Firebird</module>
        <!--<module>n2care</module>-->
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <!--        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>-->
    </properties>
    <dependencies>
        
        <!--Driver a la base de datos que utilizo por defecto en todos mis proyectos.-->
        <dependency>
            <groupId>org.firebirdsql.jdbc</groupId>
            <artifactId>jaybird</artifactId>
            <version>5.0.6.java11</version>
        </dependency>
        
        <!--Utilizada para determinar los dialectos de firebird y las base de datos.-->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-community-dialects</artifactId>
            <version>6.6.0.Final</version>
            <!--            <version>6.5.2.Final</version>-->
        </dependency>
        
        <!--Dependecia para crear los POJO o JavaBeans de manera mas facil.-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <!--<version>1.18.32</version>-->
            <type>jar</type>
        </dependency>
        
        <!--Dependencias utilizada para la obtener la ayudas en la codificacion
        de los proyectos web.-->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>1.2</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.0</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <!--////////////////////-->
        
        <!--Dependecia para los reportes-->
        
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports</artifactId>
            <version>7.0.0</version>
            <type>jar</type>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports-fonts</artifactId>
            <version>7.0.0</version>
        </dependency>
        
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports-pdf</artifactId>
            <version>7.0.0</version>
        </dependency>
        
        <!--Dependencia para uso de Codificacion y Deco- en base64-->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>5.3.0</version>
        </dependency>
        
        <!--
            Dependencia para crear pool de conexiones a las base de datos y tener 
        el control de estas conexiones.
        -->
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.17.1</version>
            <!--<version>1.17.0</version>-->
            <type>jar</type>
        </dependency><dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-dbcp2</artifactId>
            <version>2.12.0</version>
        </dependency><!--Libreria utilizada para crear los graficos de barra entre otros-->
        
        
        
        
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jfreechart</artifactId>
            <version>1.5.5</version>
            <!--<version>1.5.4</version>-->
        </dependency>
        
        <!--Libreria que nos permite crear pruebas a los modulos de los sitema 
        hechos en java swing.-->
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jcommon</artifactId>
            <version>1.0.24</version>
        </dependency>
        
        <!--Dependencia para los componente de software en java swing-->
        <dependency>
            <groupId>com.github.dotxyteam</groupId>
            <artifactId>swing-testing-toolkit</artifactId>
            <version>1.8.12</version>
            <!--<version>1.8.10</version>-->
        </dependency><dependency>
            <groupId>com.toedter</groupId>
            <artifactId>jcalendar</artifactId>
            <version>1.4</version>
            <type>jar</type>
        </dependency><!--Dependencia de tercero como RojeruSan RSMMaterialComponents entre 
        otros-->
        
        <dependency>
            <groupId>sur.softsurena</groupId>
            <artifactId>RSMaterialComponents3</artifactId>
            <version>1</version>
        </dependency>
        
        <dependency>
            <groupId>sur.softsurena</groupId>
            <artifactId>RojeruSan.lib2</artifactId>
            <version>1</version>
        </dependency>
        
        
        
        <dependency>
            <groupId>sur.softsurena</groupId>
            <artifactId>RojeruSan.full_9.6</artifactId>
            <version>1</version>
        </dependency><dependency>
            <groupId>sur.softsurena</groupId>
            <artifactId>RojeruSan.full_6</artifactId>
            <version>1</version>
        </dependency>
        
        
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-vfs2</artifactId>
            <version>2.9.0</version>
        </dependency>
        
        <dependency>
            <groupId>com.github.librepdf</groupId>
            <artifactId>openpdf</artifactId>
            <version>2.0.3</version>
            <!--<version>2.0.2</version>-->
            <type>jar</type>
        </dependency>
        
        <!--
            API que nos permite hacer envios de mensajes gratis.
        -->
        <dependency>
            <groupId>com.resend</groupId>
            <artifactId>resend-java</artifactId>
            <version>4.0.0</version>
            <!--<version>3.2.0</version>-->
        </dependency>
        
        
        
        
        
        
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.16</version>
            <!--<version>2.0.13</version>-->
        </dependency><dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.16</version>
            <!--<version>2.0.13</version>-->
        </dependency><!--        Dependecia de SophiaStudio-->
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
            <version>1.4.7</version>
        </dependency>
        
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-jpa</artifactId>
            <version>3.4.0</version>
            <type>jar</type>
        </dependency>
        
        <dependency>
            <groupId>javazoom</groupId>
            <artifactId>jlayer</artifactId>
            <version>1.0.1</version>
        </dependency>
        
        
        
        
        
        
        <!--Dependencia para las pruebas unitarias de los sistema-->
        <dependency>
            <groupId>javax.activation</groupId>
            <artifactId>activation</artifactId>
            <version>1.1.1</version>
        </dependency><dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.10.2</version>
            <type>jar</type>
        </dependency><!--Mis dependencias-->       
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.5.2</version>
        </dependency>
        
        <dependency>
            <groupId>com.mxrck</groupId>
            <artifactId>autocompleter</artifactId>
            <version>1.0</version>
            <type>jar</type>
        </dependency>
        
        
        <!--N2CARE-->
        
        <dependency>
            <groupId>com.softsurena</groupId>
            <artifactId>jtimechoocher</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.external</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>RELEASE230</version>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.3.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
            <type>jar</type>
        </dependency>
        
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>
        
    </dependencies>
    <name>Proyectos</name>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <debug>false</debug>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>